--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -60,7 +60,8 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/public, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/admin/, role: ROLE_ADMIN }
+        # - { path: ^/admin, role: ROLE_ADMIN_TABORD }
+        - { path: ^/admin/dashboard, role: ROLE_ADMIN }
         - { path: ^/, role: ROLE_USER }
             
     
