lipimaginebundle and remove avalanche

--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "gedmo/doctrine-extensions": "v2.4.7",
-        "avalanche123/imagine-bundle": "^2.1",
         "hwi/oauth-bundle": "0.4.*@dev",
         "sonata-project/doctrine-orm-admin-bundle": "^2.3",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "liip/imagine-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
