--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,9 +6,11 @@ ath_user:
     resource: "@AthUserBundle/Resources/config/routing.yml"
     prefix:   /
     
-_imagine:
-    resource: .
-    type:     imagine
+# _imagine:
+#     resource: .
+#     type:     imagine
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
 
 #HWIOAuthBundle routes
 hwi_oauth_login:
