--- a/src/Ath/UserBundle/Resources/config/services.yml
+++ b/src/Ath/UserBundle/Resources/config/services.yml
@@ -50,3 +50,12 @@ services:
         class: Ath\UserBundle\Form\Type\StatutJuridiqueFormType
         tags:
             - { name: form.type, alias: statuts_juridique_widget }
+    
+    # Listener sur entity User
+    ath.user_listener:
+        class: Ath\UserBundle\EventListener\UserIndexer
+        arguments: ['@service_container']
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: preUpdate }
+            - { name: doctrine.event_listener, event: postFlush }
