--- a/app/config/role_admin.yml
+++ b/app/config/role_admin.yml
@@ -93,6 +93,15 @@ security:
         ROLE_ADMIN_COMMENT_EXPORT: ROLE_ADMIN_COMMENT_VIEW
         ROLE_ADMIN_COMMENT: [ROLE_ADMIN_COMMENT_EXPORT, ROLE_ADMIN_COMMENT_DELETE, ROLE_ADMIN_COMMENT_EDIT, ROLE_ADMIN_COMMENT_CREATE]
 
+        # Admin Event admin
+        ROLE_ADMIN_EVENT_ADMIN_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
+        ROLE_ADMIN_EVENT_ADMIN_VIEW: ROLE_ADMIN_EVENT_ADMIN_LIST
+        ROLE_ADMIN_EVENT_ADMIN_CREATE: ROLE_ADMIN_EVENT_ADMIN_VIEW
+        ROLE_ADMIN_EVENT_ADMIN_EDIT: ROLE_ADMIN_EVENT_ADMIN_VIEW
+        ROLE_ADMIN_EVENT_ADMIN_DELETE: ROLE_ADMIN_EVENT_ADMIN_VIEW
+        ROLE_ADMIN_EVENT_ADMIN_EXPORT: ROLE_ADMIN_EVENT_ADMIN_VIEW
+        ROLE_ADMIN_EVENT_ADMIN: [ROLE_ADMIN_EVENT_ADMIN_EXPORT, ROLE_ADMIN_EVENT_ADMIN_DELETE, ROLE_ADMIN_EVENT_ADMIN_EDIT, ROLE_ADMIN_EVENT_ADMIN_CREATE]
+
         ROLE_ASSOC: ROLE_USER
         ROLE_CELEBRITE: ROLE_USER
-        ROLE_ADMIN:       [ROLE_ASSOC, ROLE_CELEBRITE, ROLE_ADMIN_USER, ROLE_ADMIN_DEMANDE_CELEBRITE, ROLE_ADMIN_GROUP_APPLICATION, ROLE_ADMIN_CATEGORIE_PRODUIT, ROLE_ADMIN_PRODUIT, ROLE_ADMIN_SPORT, ROLE_ADMIN_USER_DISCUSSION, ROLE_ADMIN_MESSAGE, ROLE_ADMIN_POST, ROLE_ADMIN_COMMENT, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN:       [ROLE_ASSOC, ROLE_CELEBRITE, ROLE_ADMIN_USER, ROLE_ADMIN_DEMANDE_CELEBRITE, ROLE_ADMIN_GROUP_APPLICATION, ROLE_ADMIN_CATEGORIE_PRODUIT, ROLE_ADMIN_PRODUIT, ROLE_ADMIN_SPORT, ROLE_ADMIN_USER_DISCUSSION, ROLE_ADMIN_MESSAGE, ROLE_ADMIN_POST, ROLE_ADMIN_COMMENT, ROLE_ADMIN_EVENT_ADMIN, ROLE_ALLOWED_TO_SWITCH]
