--- a/src/Ath/MainBundle/Resources/config/routing.yml
+++ b/src/Ath/MainBundle/Resources/config/routing.yml
@@ -2,5 +2,8 @@ ath_main_homepage:
     path:     /
     defaults: { _controller: AthMainBundle:Default:index }
 ath_list_association:
-    path:     /associations
-    defaults: { _controller: AthMainBundle:Association:index }
+    path:     /associations/list/{page}
+    defaults: { _controller: AthMainBundle:Association:index, page: 1 }
+ath_page_association:
+    path:     /associations/{id}
+    defaults: { _controller: AthMainBundle:Association:page }
