feat(templating): udate

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap-sass" : "*",
     "breakpoint-sass" : "*",
     "bootstrap" : "*",
-    "bootstrap-social" : "*"
+    "bootstrap-social" : "*",
+    "bootstrap-select" : "*"
   }
 }
