--- a/src/Ath/MainBundle/Resources/config/routing.yml
+++ b/src/Ath/MainBundle/Resources/config/routing.yml
@@ -39,3 +39,7 @@ ath_main_event_sportifs:
 ath_main_event_sportifs_ajax:
     path: /sportif/evenements/ajax
     defaults: { _controller: AthMainBundle:Default:eventSportifsAjax }
+
+ath_main_posts_ajax:
+    path: /sportif/posts/ajax
+    defaults: { _controller: AthMainBundle:Default:postsAjax }
