--- a/src/Ath/MainBundle/Resources/config/routing.yml
+++ b/src/Ath/MainBundle/Resources/config/routing.yml
@@ -7,6 +7,13 @@ ath_list_association:
 ath_page_association:
     path:     /associations/{id}
     defaults: { _controller: AthMainBundle:Association:page }
+    
+ath_list_produit:
+    path:     /produits/list/{page}
+    defaults: { _controller: AthMainBundle:Produit:index, page: 1 }
+ath_page_produit:
+    path:     /produits/{id}
+    defaults: { _controller: AthMainBundle:Produit:page }
 
 ath_main_datavis_user:
     path: /admin/datavis/user
