--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -296,6 +296,10 @@ liip_imagine:
 
     filter_sets:
         cache: ~
+        micro:
+            quality: 75
+            filters:
+                thumbnail: { size: [50, 50], mode: outbound }
         mini:
             quality: 75
             filters:
