Permettre au celebrite d'ajouter des produits à leur équipement

--- a/app/config/role_admin.yml
+++ b/app/config/role_admin.yml
@@ -38,7 +38,16 @@ security:
         ROLE_ADMIN_CATEGORIE_PRODUIT_DELETE: ROLE_ADMIN_CATEGORIE_PRODUIT_VIEW
         ROLE_ADMIN_CATEGORIE_PRODUIT_EXPORT: ROLE_ADMIN_CATEGORIE_PRODUIT_VIEW
         ROLE_ADMIN_CATEGORIE_PRODUIT: [ROLE_ADMIN_CATEGORIE_PRODUIT_EXPORT, ROLE_ADMIN_CATEGORIE_PRODUIT_DELETE, ROLE_ADMIN_CATEGORIE_PRODUIT_EDIT, ROLE_ADMIN_CATEGORIE_PRODUIT_CREATE]
-    
+        
+        # Admin FILE_Produit
+        ROLE_ADMIN_FILE_PRODUIT_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
+        ROLE_ADMIN_FILE_PRODUIT_VIEW: ROLE_ADMIN_FILE_PRODUIT_LIST
+        ROLE_ADMIN_FILE_PRODUIT_CREATE: ROLE_ADMIN_FILE_PRODUIT_VIEW
+        ROLE_ADMIN_FILE_PRODUIT_EDIT: ROLE_ADMIN_FILE_PRODUIT_VIEW
+        ROLE_ADMIN_FILE_PRODUIT_DELETE: ROLE_ADMIN_FILE_PRODUIT_VIEW
+        ROLE_ADMIN_FILE_PRODUIT_EXPORT: ROLE_ADMIN_FILE_PRODUIT_VIEW
+        ROLE_ADMIN_FILE_PRODUIT: [ROLE_ADMIN_FILE_PRODUIT_EXPORT, ROLE_ADMIN_FILE_PRODUIT_DELETE, ROLE_ADMIN_FILE_PRODUIT_EDIT, ROLE_ADMIN_FILE_PRODUIT_CREATE]
+
         # Admin Produit
         ROLE_ADMIN_PRODUIT_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
         ROLE_ADMIN_PRODUIT_VIEW: ROLE_ADMIN_PRODUIT_LIST
@@ -46,8 +55,9 @@ security:
         ROLE_ADMIN_PRODUIT_EDIT: ROLE_ADMIN_PRODUIT_VIEW
         ROLE_ADMIN_PRODUIT_DELETE: ROLE_ADMIN_PRODUIT_VIEW
         ROLE_ADMIN_PRODUIT_EXPORT: ROLE_ADMIN_PRODUIT_VIEW
-        ROLE_ADMIN_PRODUIT: [ROLE_ADMIN_PRODUIT_EXPORT, ROLE_ADMIN_PRODUIT_DELETE, ROLE_ADMIN_PRODUIT_EDIT, ROLE_ADMIN_PRODUIT_CREATE]
-        
+        ROLE_ADMIN_PRODUIT: [ROLE_ADMIN_PRODUIT_EXPORT, ROLE_ADMIN_PRODUIT_DELETE, ROLE_ADMIN_PRODUIT_EDIT, ROLE_ADMIN_PRODUIT_CREATE, ROLE_ADMIN_FILE_PRODUIT]
+        ROLE_ADMIN_PRODUIT_CELEBRITE: [ROLE_ADMIN_FILE_PRODUIT, ROLE_ADMIN_PRODUIT_DELETE, ROLE_ADMIN_PRODUIT_EDIT, ROLE_ADMIN_PRODUIT_CREATE]
+
         # Admin Sport
         ROLE_ADMIN_SPORT_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
         ROLE_ADMIN_SPORT_VIEW: ROLE_ADMIN_SPORT_LIST
@@ -75,6 +85,15 @@ security:
         ROLE_ADMIN_MESSAGE_EXPORT: ROLE_ADMIN_MESSAGE_VIEW
         ROLE_ADMIN_MESSAGE: [ROLE_ADMIN_MESSAGE_EXPORT, ROLE_ADMIN_MESSAGE_DELETE, ROLE_ADMIN_MESSAGE_EDIT, ROLE_ADMIN_MESSAGE_CREATE]
         
+        # Admin FILE_Post
+        ROLE_ADMIN_FILE_POST_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
+        ROLE_ADMIN_FILE_POST_VIEW: ROLE_ADMIN_FILE_POST_LIST
+        ROLE_ADMIN_FILE_POST_CREATE: ROLE_ADMIN_FILE_POST_VIEW
+        ROLE_ADMIN_FILE_POST_EDIT: ROLE_ADMIN_FILE_POST_VIEW
+        ROLE_ADMIN_FILE_POST_DELETE: ROLE_ADMIN_FILE_POST_VIEW
+        ROLE_ADMIN_FILE_POST_EXPORT: ROLE_ADMIN_FILE_POST_VIEW
+        ROLE_ADMIN_FILE_POST: [ROLE_ADMIN_FILE_POST_EXPORT, ROLE_ADMIN_FILE_POST_DELETE, ROLE_ADMIN_FILE_POST_EDIT, ROLE_ADMIN_FILE_POST_CREATE]
+
         # Admin Post
         ROLE_ADMIN_POST_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
         ROLE_ADMIN_POST_VIEW: ROLE_ADMIN_POST_LIST
@@ -82,7 +101,7 @@ security:
         ROLE_ADMIN_POST_EDIT: ROLE_ADMIN_POST_VIEW
         ROLE_ADMIN_POST_DELETE: ROLE_ADMIN_POST_VIEW
         ROLE_ADMIN_POST_EXPORT: ROLE_ADMIN_POST_VIEW
-        ROLE_ADMIN_POST: [ROLE_ADMIN_POST_EXPORT, ROLE_ADMIN_POST_DELETE, ROLE_ADMIN_POST_EDIT, ROLE_ADMIN_POST_CREATE]
+        ROLE_ADMIN_POST: [ROLE_ADMIN_FILE_POST, ROLE_ADMIN_POST_EXPORT, ROLE_ADMIN_POST_DELETE, ROLE_ADMIN_POST_EDIT, ROLE_ADMIN_POST_CREATE]
         
         # Admin COMMENT
         ROLE_ADMIN_COMMENT_LIST: [ROLE_ADMIN_TABORD, ROLE_USER]
@@ -103,5 +122,5 @@ security:
         ROLE_ADMIN_EVENT_ADMIN: [ROLE_ADMIN_EVENT_ADMIN_EXPORT, ROLE_ADMIN_EVENT_ADMIN_DELETE, ROLE_ADMIN_EVENT_ADMIN_EDIT, ROLE_ADMIN_EVENT_ADMIN_CREATE]
 
         ROLE_ASSOC: ROLE_USER
-        ROLE_CELEBRITE: ROLE_USER
+        ROLE_CELEBRITE: [ROLE_USER,ROLE_ADMIN_PRODUIT_CELEBRITE]
         ROLE_ADMIN:       [ROLE_ASSOC, ROLE_CELEBRITE, ROLE_ADMIN_USER, ROLE_ADMIN_DEMANDE_CELEBRITE, ROLE_ADMIN_GROUP_APPLICATION, ROLE_ADMIN_CATEGORIE_PRODUIT, ROLE_ADMIN_PRODUIT, ROLE_ADMIN_SPORT, ROLE_ADMIN_USER_DISCUSSION, ROLE_ADMIN_MESSAGE, ROLE_ADMIN_POST, ROLE_ADMIN_COMMENT, ROLE_ADMIN_EVENT_ADMIN, ROLE_ALLOWED_TO_SWITCH]
