Execute test in database test

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,14 +14,12 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
-# doctrine:
-#     dbal:
-#         driver: pdo_sqlite
-#         path:    ":memory:"
-#         memory:  true
-#     orm:
-#         auto_generate_proxy_classes: true
-#         auto_mapping: true
-        # connections:
-        #     test_app:
-                
+doctrine:
+    dbal:
+        driver:   pdo_mysql
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name_test%"
+        user:     "%database_user%"
+        password: "%database_password%"
+        charset:  UTF8
